--- a/Doitmission05/app/src/main/res/drawable/filled_border.xml
+++ b/Doitmission05/app/src/main/res/drawable/filled_border.xml
@@ -3,15 +3,20 @@
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#F26722" />
-            <solid android:color="#F26722" />
+            <stroke android:width="1dp" android:color="#ffff0000" />
+            <solid android:color="#ffff0000" />
+        <corners
+            android:radius="12dp" />
+
         </shape>
     </item>
 
     <item android:top="1dp" android:bottom="1dp" android:right="1dp" android:left="1dp">
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#F26722" />
-            <solid android:color="#F26722" />
+            <stroke android:width="1dp" android:color="#ffff0000" />
+            <solid android:color="#ffff0000" />
+            <corners
+                android:radius="12dp" />
         </shape>
     </item>
 
